<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/backgroundAnimation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/food_background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/image_background"
                            android:paddingTop="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/fries2"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/app_name11"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/image_background"
                            android:paddingTop="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pizza2"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/app_name12"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/image_background"
                            android:paddingTop="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/friedcheiken2"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/app_name13"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/image_background"
                            android:paddingTop="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pasta2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/app_name14"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/image_background"
                            android:paddingTop="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pancake2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/app_name16"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/image_background"
                            android:paddingTop="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/salad" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/app_name15"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:background="@drawable/image_background"
                            android:paddingTop="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/burgar2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/app_name17"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/app_name9"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/app_name10"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/image_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fries" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="5dp"
                android:text="@string/app_name7"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/app_name8"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/image_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pizza_image" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="5dp"
                android:text="@string/app_name5"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/app_name6"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/image_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/friecheiken" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="5dp"
                android:text="@string/app_name3"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/app_name4"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/image_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pasta" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:padding="5dp"
                android:text="@string/app_name1"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/image_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="3dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pancake" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:paddingBottom="28dp"
                android:text="@string/app_name2"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>
